feat: Support for experimental execute() operation
